dnl Process this file with autoconf to produce a configure script.
AC_INIT(datagen/dbgen/bm_utils.c)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(strings.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl> Configuration options for different databases, PostgreSQL is default.
DATABASE_TO_USE="pgsql"
SEPARATOR_FOR_DB="|"
AC_ARG_WITH(postgres,
	[  --with-postgresql default],
	[ DATABASE_TO_USE="pgsql" SEPARATOR_FOR_DB="|" ])
AC_ARG_WITH(sapdb,
	[  --with-sapdb],
	[DATABASE_TO_USE="sapdb" SEPARATOR_FOR_DB=","])

TOPDIR=`pwd`
AC_SUBST(TOPDIR)
AC_SUBST(DATABASE_TO_USE)
AC_SUBST(SEPARATOR_FOR_DB)

AC_OUTPUT([
make.common 
Makefile 
dbdriver/utils/Makefile 
datagen/dbgen/Makefile 
data_collect/pgsql/dbt3_stats.sh
data_collect/pgsql/load_test_stats.sh
data_collect/pgsql/perf_test_stats.sh
data_collect/pgsql/power_test_stats.sh
data_collect/pgsql/single_query_stats.sh
data_collect/pgsql/throughput_query_stats.sh
data_collect/pgsql/throughput_test_stats.sh
data_collect/sapdb/dbt3_stats.sh
data_collect/sapdb/power_test_stats.sh
data_collect/sapdb/single_query_stats.sh
data_collect/sapdb/throughput_query_stats.sh
data_collect/sapdb/throughput_test_stats.sh
dbdriver/scripts/get_composite.pl
dbdriver/scripts/pgsql/explain_single_query.sh
dbdriver/scripts/pgsql/explain_power_query.sh
dbdriver/scripts/pgsql/run_dbt3.sh
dbdriver/scripts/pgsql/run_load_test.sh
dbdriver/scripts/pgsql/run_perf_test.sh
dbdriver/scripts/pgsql/run_power_query.sh
dbdriver/scripts/pgsql/run_power_test.sh
dbdriver/scripts/pgsql/run_refresh_stream.sh
dbdriver/scripts/pgsql/run_rf1.sh
dbdriver/scripts/pgsql/run_rf2.sh
dbdriver/scripts/pgsql/run_single_query.sh
dbdriver/scripts/pgsql/run_throughput_query.sh
dbdriver/scripts/pgsql/run_throughput_test.sh
dbdriver/scripts/sapdb/explain_single_query.sh
dbdriver/scripts/sapdb/explain_power_query.sh
dbdriver/scripts/sapdb/run_dbt3.sh
dbdriver/scripts/sapdb/run_load_test.sh
dbdriver/scripts/sapdb/run_single_query.sh
dbdriver/scripts/sapdb/run_perf_test.sh
dbdriver/scripts/sapdb/run_power_query.sh
dbdriver/scripts/sapdb/run_power_test.sh
dbdriver/scripts/sapdb/run_refresh_stream.sh
dbdriver/scripts/sapdb/run_rf1.sh
dbdriver/scripts/sapdb/run_rf2.sh
dbdriver/scripts/sapdb/run_throughput_query.sh
dbdriver/scripts/sapdb/run_throughput_test.sh
scripts/pgsql/build_db.sh
scripts/pgsql/create_db.sh
scripts/pgsql/create_indexes.sh
scripts/pgsql/create_tables.sh
scripts/pgsql/drop_tables.sh
scripts/pgsql/grant.sh
scripts/pgsql/load_db.sh
scripts/pgsql/set_db_env.sh
scripts/pgsql/set_run_env.sh
scripts/pgsql/start_db.sh
scripts/sapdb/backup_db.sh
scripts/sapdb/build_db.sh
scripts/sapdb/create_db.sh
scripts/sapdb/create_indexes.sh
scripts/sapdb/create_tables.sh
scripts/sapdb/drop_tables.sh
scripts/sapdb/load_db.sh
scripts/sapdb/restore_db.sh
scripts/sapdb/set_run_env.sh
scripts/sapdb/update_statistics.sh
])
