AC_PREREQ(2.59)

dnl Process this file with autoconf to produce a configure script.
AC_INIT(dbt3, 2.1.1, osdldbt-general@lists.sourceforge.net)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(strings.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl> Configuration options for different databases, PostgreSQL is default.
AC_ARG_WITH(postgresql,
	[ AC_HELP_STRING([ --with-postgresql=DIR], [Default.])],
	[ PGSQL_PATH=$withval DATABASE_TO_USE="pgsql" SEPARATOR_FOR_DB="|" ],
	[ DATABASE_TO_USE="pgsql" SEPARATOR_FOR_DB="|" ])
AC_ARG_WITH(sapdb,
	[  --with-sapdb],
	[DATABASE_TO_USE="sapdb" SEPARATOR_FOR_DB=","], [])

TOPDIR=`pwd`
AC_SUBST(TOPDIR)
AC_SUBST(DATABASE_TO_USE)
AC_SUBST(SEPARATOR_FOR_DB)

AC_PATH_PROGS([SAR], [sar bsdsar], ,
             [$PATH:/usr/local/bin:/usr/bin])
if test -z "$SAR"
then
  AC_MSG_WARN([*** sar or bsdsar not found some scripts may not be usable])
  SAR=/usr/bin/sar
fi

AC_PATH_PROGS([IOSTAT], [iostat], ,
             [$PATH:/usr/local/bin:/usr/bin:/usr/X11R6/bin])
if test -z "$IOSTAT"
then
  AC_MSG_WARN([*** iostat not found some scripts may not be usable])
  IOSTAT=/usr/bin/iostat
fi

AC_PATH_PROGS([VMSTAT], [vmstat], ,
             [$PATH:/usr/local/bin:/usr/bin:/usr/X11R6/bin])
if test -z "$VMSTAT"
then
  AC_MSG_WARN([*** vmstat not found some scripts may not be usable])
  VMSTAT=/usr/bin/vmstat
fi

if test "$DATABASE_TO_USE" == "pgsql"; then
  dnl check for createdb
  AC_PATH_PROGS(CREATEDB, createdb, ,
    [$PATH:$PGSQL_PATH/bin:/bin:/usr/bin:/usr/local/bin]
  )
  if test -z "$CREATEDB" ; then
    AC_MSG_ERROR([*** createdb is required])
  fi

  dnl check for dropdb
  AC_PATH_PROGS(DROPDB, dropdb, ,
    [$PATH:$PGSQL_PATH/bin:/bin:/usr/bin:/usr/local/bin]
  )
  if test -z "$DROPDB" ; then
    AC_MSG_ERROR([*** dropdb is required])
  fi

  dnl check for psql
  AC_PATH_PROGS(PSQL, psql, ,
    [$PATH:$PGSQL_PATH/bin:/bin:/usr/bin:/usr/local/bin]
  )
  if test -z "$PSQL" ; then
    AC_MSG_ERROR([*** psql is required])
  fi

  dnl check for vacuumdb
  AC_PATH_PROGS(VACUUMDB, vacuumdb, ,
    [$PATH:$PGSQL_PATH/bin:/bin:/usr/bin:/usr/local/bin]
  )
  if test -z "$VACUUMDB" ; then
    AC_MSG_ERROR([*** vacuumdb is required])
  fi

  dnl check for vacuumdb
  AC_PATH_PROGS(PG_CTL, pg_ctl, ,
    [$PATH:$PGSQL_PATH/bin:/bin:/usr/bin:/usr/local/bin]
  )
  if test -z "$PG_CTL" ; then
    AC_MSG_ERROR([*** pg_ctl is required])
  fi

  dnl check for initdb
  AC_PATH_PROGS(INITDB, initdb, ,
    [$PATH:$PGSQL_PATH/bin:/bin:/usr/bin:/usr/local/bin]
  )
  if test -z "$INITDB" ; then
    AC_MSG_ERROR([*** initdb is required])
  fi

  DBFILELIST="\
    dbdriver/scripts/pgsql/run_load_test.sh \
    dbdriver/scripts/pgsql/run_perf_test.sh \
    dbdriver/scripts/pgsql/run_single_query.sh \
    scripts/pgsql/get_query_plan.sh \
    scripts/pgsql/get_version.sh \
    scripts/pgsql/run_power_query.sh \
    scripts/pgsql/run_rf1.sh \
    scripts/pgsql/run_rf2.sh \
    scripts/pgsql/run_throughput_stream.sh \
    scripts/pgsql/create_db.sh \
    scripts/pgsql/create_indexes.sh \
    scripts/pgsql/create_tables.sh \
    scripts/pgsql/db_stats.sh \
    scripts/pgsql/drop_db.sh \
    scripts/pgsql/drop_tables.sh \
    scripts/pgsql/grant.sh \
    scripts/pgsql/load_db.sh \
    scripts/pgsql/pgsql_profile \
    scripts/pgsql/q_time.sh \
    scripts/pgsql/start_db.sh \
    scripts/pgsql/stop_db.sh \
    scripts/pgsql/update_statistics.sh \
    scripts/pgsql/load_test.sh \
    scripts/pgsql/power_test.sh \
    scripts/pgsql/throughput_test.sh \
    scripts/pgsql/throughput_stream_wrapper.sh \
    scripts/pgsql/truncate_tables.sh \
    scripts/pgsql/record_end.sh \
    scripts/pgsql/record_start.sh"
elif test "$DATABASE_TO_USE" == "sapdb"; then
  DBFILELIST="\
    data_collect/sapdb/dbt3_stats.sh \
    data_collect/sapdb/power_test_stats.sh \
    data_collect/sapdb/single_query_stats.sh \
    data_collect/sapdb/throughput_query_stats.sh \
    data_collect/sapdb/throughput_test_stats.sh \
    dbdriver/scripts/sapdb/explain_single_query.sh \
    dbdriver/scripts/sapdb/explain_power_query.sh \
    dbdriver/scripts/sapdb/run_dbt3.sh \
    dbdriver/scripts/sapdb/run_load_test.sh \
    dbdriver/scripts/sapdb/run_single_query.sh \
    dbdriver/scripts/sapdb/run_perf_test.sh \
    dbdriver/scripts/sapdb/run_power_query.sh \
    dbdriver/scripts/sapdb/run_power_test.sh \
    dbdriver/scripts/sapdb/run_refresh_stream.sh \
    dbdriver/scripts/sapdb/run_rf1.sh \
    dbdriver/scripts/sapdb/run_rf2.sh \
    dbdriver/scripts/sapdb/run_throughput_query.sh \
    dbdriver/scripts/sapdb/run_throughput_test.sh \
    scripts/sapdb/backup_db.sh \
    scripts/sapdb/build_db.sh \
    scripts/sapdb/create_db.sh \
    scripts/sapdb/create_indexes.sh \
    scripts/sapdb/create_tables.sh \
    scripts/sapdb/drop_tables.sh \
    scripts/sapdb/load_db.sh \
    scripts/sapdb/restore_db.sh \
    scripts/sapdb/sapdb_profile \
    scripts/sapdb/update_statistics.sh"
fi

AC_OUTPUT([
Makefile \
make.common \
datagen/dbgen/Makefile \
dbdriver/utils/Makefile \
scripts/dbt3_profile \
scripts/get_composite.pl \
scripts/get_config.sh \
scripts/gen_data.sh \
scripts/gen_graphs.sh \
scripts/gen_html.sh \
scripts/run_workload.sh \
scripts/start_sysstats.sh \
scripts/stop_sysstats.sh \
$DBFILELIST
])
