#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2005 Mark Wong & Open Source Development Labs, Inc.
#

AUTOMAKE_OPTIONS = no-dependencies

INCLUDES = -Iinclude

bin_PROGRAMS = parse_query gtime

parse_query_SOURCES = main.c get_statement.c

gtime_SOURCES = get_time.c
